# python-class-2025

./: gitignore.txt
FinalProject/: Presentation.pptx  README.md  main.py  my_project.code-workspace  pyproject.toml
FinalProject/Source Code/: Clean2_EEG_Data.csv  clean_eeg_data.csv  data_analysis.ipynb  data_cleaning.ipynb
FinalProject/src/: data_analysis.py  data_cleaning.py  data_visualisation.py
FinalProject/test/: test_analysis.py  test_cleaning.py
Mini-Project-1/: mini_project_1.ipynb
Mini-Project-2/: README.md  main.py
